Game Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_40\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Rooshi\Documents\Program files\Bluej\Internet
-d
C:\Users\Rooshi\Documents\Program files\Bluej\Internet\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Rooshi\Documents\Program files\Bluej\Internet\Panel.java
<---- end of javadoc command ---->
Loading source file C:\Users\Rooshi\Documents\Program files\Bluej\Internet\Panel.java...
C:\Users\Rooshi\Documents\Program files\Bluej\Internet\Panel.java:197: error: illegal line end in character literal
        flash counter = 1'
                         ^
1 error
